# lcs

./: .gitignore  CMakeLists.txt  License.txt  ReadMe.md  index.html  params.json
doc/: UserGuide.md
plugin/: Deformation.xml  DeformationGUI.xml  DeformationICN.qrc  IdentifyStructures.xml  IdentifyStructuresGUI.xml  IdentifyStructuresICN.qrc
src/: Deformation.cxx  Deformation.h  IdentifyStructures.cxx  IdentifyStructures.h  ImageDataDerivatives.cxx  ImageDataDerivatives.h  Matrix.cxx  Matrix.h  PointDataType.cxx  PointDataType.h  SmoothStructuredPoints.cxx  SmoothStructuredPoints.h  Tensor.cxx  Tensor.h  Vector.cxx  Vector.h  main.cxx
test/: GenerateSampleData.cxx  TestGaussKernel.m  TestIdentifyStructures.cxx  TestMatrix.cxx  TestSmoothStructuredPoints.cxx  TestVector.cxx
